--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "@astrojs/starlight": "^0.31.1",
     "astro": "^5.1.5",
     "sharp": "^0.32.5"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
