--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore .",
     "astro": "astro",
     "prepare": "husky"
   },
